--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,30 +1,30 @@
-
+<!DOCTYPE html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <script src="/javascript/login.js"></script>
-    <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
-    <link rel="stylesheet" type="text/css" href="/stylesheets/login.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Login</title>
+
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/javascripts/login1.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="/stylesheets/login1.css">
 </head>
 <body>
-    <br>
-    <div class="bg-image"></div>
-    <div class="main">
-        <h2 id="pagetitle">Login Page</h2>
-        <div class="form">
-            <form method="POST" action="/login">
-                <label id="label_username" for="username">Enter Username</label>
-                <input id="input_username" type="text" placeholder="Enter your username" name="username" tabindex="1" required>
-                <br>
-                <label id="label_password" for="Password">Enter Password</label>
-                <input id="input_password" type="password" placeholder="Enter your password" name="Password" tabindex="2" required>
-                <br>
-                <button type="submit" id="btnSubmit" tabindex="3">Login</button>
-            </form>
-            <a href="/forgot" tabindex="4" id="forgot_link">Forgot Password?</a>
-            <br>
-            <br>
-            <div class="btnNo_account">
-                <a href="/register"><button id="register_link" tabindex="5">No Account? Click here</button></a>
-            </div>
-        </div>
+    <div class="form">
+        <h1 id="pagetitle">Login Page</h1>
+        <form method="POST" action="/login">
+            <label for="username">Enter Username</label>
+            <input type="text" name="username" required>
+            <label for="Password">Enter Password</label>
+            <input type="password" name="Password" required>
+            <input type="text" name="socketid" id="socketid" style="display: none;">
+            <button type="submit">Login</button>
+        </form>
+        <a href="/forgot" tabindex="4" id="forgot_link">Forgot Password?</a>
+        <a href="/register"><button id="register_link" tabindex="5">No Account? Click here</button></a>
     </div>
 </body>
+</html>
